# sql_proxy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  claude.local.md  docker-compose.yml  init.sql  main.py  pyproject.toml
api/: dependencies.py  exception_handlers.py
api/routes/: query.py  tables.py
api/schemas/: requests.py  responses.py
domain/entities/: column_info.py  pagination.py  query_result.py  table_info.py
domain/repositories/: database_repository.py
infrastructure/config/: settings.py
infrastructure/database/: connection.py  query_validator.py  repository.py
infrastructure/exceptions/: database_exceptions.py
sql_query_for_exem/: README.md  sql_database_execute_query.py  sql_database_get_tables.py  sql_table_get_schema.py
use_cases/: execute_query.py  get_table_schema.py  get_tables.py
